--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,56 @@
 body {
   font-family: "Lato", sans-serif;
+  --main-color: #3387AF;
 }
 
-/*#3387AF */
+.main {
+  display: flex;
+}
+
+.main__img {
+  width: 100%;
+}
+
+.main__content {
+  margin: auto 50px;
+  text-align: center;
+}
+
+.main__content p {
+  text-align: left;
+}
+
+.hi {
+  color: var(--main-color);
+  font-size: 28px;
+}
+
+.main__text {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.main__button {
+  background-color: var(--main-color);
+  padding: 10px 30px;
+  border: none;
+  border-radius: 10px;
+}
+
+.main__button:hover {
+  text-shadow: 1px 2px 3px #000;
+}
+
+.main__link {
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.footer {
+  height: 50px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
